# overwatch-ingest

./: .air.toml  .env.example  .gitignore  Makefile  README.md  go.mod  go.sum  go.work  sqlc.yaml
.github/: PR_TEMPLATE.md  branch-protection-rules.md
.github/workflows/: ci.yml
cmd/e2e/: main.go
cmd/server/: main.go
deploy/: Dockerfile
deployments/k8s/: kind-config.yaml
docs/: GO_SERVICE_ARCH.MD  PY_SERVICE_ARCH.MD  ROADMAP.md
gateway/: .air.toml  go.mod
migrations/: 000001_create_ingest_records.down.sql  000001_create_ingest_records.up.sql  000002_create_quarantined_records.down.sql  000002_create_quarantined_records.up.sql  000003_create_source_reliability.down.sql  000003_create_source_reliability.up.sql
platform/pylib/: pyproject.toml
platform/pylib/scout_common/: __init__.py
platform/pylib/scout_common/config/: __init__.py  errors.py  loader.py  parser.py  validator.py
platform/pylib/scout_common/database/: __init__.py
platform/pylib/scout_common/database/postgres/: __init__.py  client.py  config.py  errors.py  health.py  transaction.py  vector.py  vector_migrations.py
platform/pylib/scout_common/errors/: __init__.py  base.py  codes.py  combinators.py  conftest.py  constructors.py  decorators.py  exceptions.py  result.py  serialization.py  test_base.py  test_codes.py  test_combinators.py  test_constructors.py  test_decorators.py  test_result.py  test_serialization.py  types.py
platform/pylib/scout_common/events/: __init__.py  config.py  message.py  publisher.py  subscriber.py
platform/pylib/scout_common/events/nats/: __init__.py  config.py  publisher.py  subscriber.py  test_publisher.py
platform/pylib/scout_common/grpc/: __init__.py
platform/pylib/scout_common/grpc/client/: __init__.py  client.py  config.py  grpc_client.py
platform/pylib/scout_common/grpc/interceptors/: __init__.py  logging.py  recovery.py
platform/pylib/scout_common/grpc/server/: __init__.py  config.py  grpc_server.py  server.py
platform/pylib/scout_common/observability/: __init__.py
platform/pylib/scout_common/observability/logger/: logger.py  noop.py  structured.py
platform/pylib/scout_common/observability/logging/: __init__.py
platform/pylib/scout_common/observability/metrics/: __init__.py  counter.py  gauge.py  histogram.py  registry.py
platform/pylib/scout_common/observability/tracing/: __init__.py  context.py  metadata.py  propogation.py  request_id.py
scripts/: generate-proto.sh
services/tools/: config.py  pyproject.toml
services/tools/api/v1/: __init__.py  tools_pb2.py  tools_pb2_grpc.py
services/tools/app/: __init__.py  main.py
(+218 files in other folders)
