[tool.poetry]
name = "scout-tools"
version = "0.1.0"
description = "ML tools service for Scout agents"
authors = ["SJ Lee <sjtommylee@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
scout-common = {path = "../../platform/pylib", develop = true}
grpcio-tools = "^1.76.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.285"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
